@@ -1,5 +1,14 @@
 2006-12-07  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
 
+	* unichrome/via_video.h:
+	* unichrome/via_swov.h:
+	* unichrome/via_swov.c:
+
+	Made K8M890 XV FIFO settings match K8M800
+	Enabled XV_DEBUG
+
+2006-12-07  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>
+
 	* unichrome/via_mode.h:
 
 	Updated the BandwidthTable for K8M890 chipset.
